--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,11 @@ body {
     fill: currentColor;
 }
 
+.button:hover,.button:focus{
+
+   cursor: pointer;
+}
+
 .footer,
 .banner {
     background-color: var(--footer-color);
@@ -416,7 +421,7 @@ margin-bottom: 30px;
     position: absolute;
     top: 50%;
     left: 50%;
-    background-color: var(--bakrnd-color-second);
+    background-color: var(--text-banner-color);
     min-width: 528px;
     min-height: 581px;
     padding: 40px;
@@ -449,11 +454,13 @@ margin-bottom: 30px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
 }
 
 .close-button:hover,
 .close-button:focus {
-    fill: var(--accent);
+    fill: var(--accent-color);
+ 
 }
 
 .modal-form {
@@ -463,7 +470,7 @@ margin-bottom: 30px;
 .title-modal {
     font-size: 20px;
     text-align: center;
-    color: var(--primary-text-color);
+    color: var(--text-color-tittle);
     margin-bottom: 12px;
 }
 
@@ -605,7 +612,8 @@ textarea::placeholder {
     letter-spacing: 0.06em;
 
     color: var(--text-banner-color);
-
+    border: 0;
+    border-radius: 4px;
     background: #188ce8;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
